Showing hero images in the chapters with aspectRatio to avoid jumping while loading them

--- a/src/components/layout.module.css
+++ b/src/components/layout.module.css
@@ -17,7 +17,3 @@
 .content a:visited {
   color: #000;
 }
-
-.content img {
-  margin-bottom: 80px;
-}
