--- a/src/components/layoutChapter.module.css
+++ b/src/components/layoutChapter.module.css
@@ -19,3 +19,19 @@
     text-align: right;
   }
 }
+
+.hero {
+  width: 100%;
+  overflow: hidden;
+  margin: 0;
+  padding-top: 100%;
+  position: relative;
+  margin-bottom: 80px;
+}
+.hero img {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 100%;
+  transform: translate(-50%, -50%);
+}
